Fix header image with z-index

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .header__title {
@@ -59,5 +60,5 @@
   width: 646px;
   height: 568px;
   background-repeat: no-repeat;
-  z-index: 1;
+  z-index: -1;
 }
